# Project-F-Analyzer

./: .mypy.ini  LICENSE  README.md  pyproject.toml
analyzer/core/: __init__.py  graphics.py  types.py
