[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Hector Ulacio", email = "hectorulacior@gmail.com"},
]
dependencies = [
    "opencv-python-headless>=4.6.0.66",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
